increased memory allocated to maven embedded tomcat server